--- a/src/components/BarComponents/TopBar/styles.module.scss
+++ b/src/components/BarComponents/TopBar/styles.module.scss
@@ -4,8 +4,6 @@
 .mainNavDiv {
   nav {
     width: 100%;
-    position: fixed;
-    top: 0%;
     background-color: white;
     display: flex;
     flex-wrap: wrap;
