--- a/src/index.scss
+++ b/src/index.scss
@@ -8,7 +8,7 @@
 }
 
 html {
-  // height: 100%;
+  min-height: 100vh;
 }
 
 body {
