--- a/src/pages/AboutPage/styles.module.scss
+++ b/src/pages/AboutPage/styles.module.scss
@@ -1,5 +1,5 @@
 .aboutDiv {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   padding: 0 100px;
