--- a/src/pages/PlaylistInputPage/styles.module.scss
+++ b/src/pages/PlaylistInputPage/styles.module.scss
@@ -3,14 +3,14 @@
 .playlistInPgDiv {
   display: flex;
   flex-direction: row;
-  height: 100vh;
+  min-height: 100%;
 
   @media screen and (max-width: $mobile-width) {
     flex-direction: column;
   }
 
   .inputDiv {
-    min-width: 40vw;
+    min-width: 50vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -24,11 +24,11 @@
 
     .swipeableDiv {
       width: 100%;
-      height: 100px;
+      min-height: 100px;
     }
 
     .ctrlButtonsDiv {
-      height: 100%;
+      min-height: 100%;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -63,12 +63,10 @@
 
   .guideDiv {
     width: 40%;
-    height: 80vh;
+    min-height: 80vh;
     padding-right: 70px;
     position: relative;
     top: 15%;
-    flex-grow: 1;
-    overflow: auto;
 
     ul {
       list-style-type: decimal;
